[package]
name = "apexforge_afe"
version = "0.2.2"
edition = "2021"
description = "A Rust library for creating ApexForge .afe files with embedded Lua scripts"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Natiqmammad/ApexForge_Afe" 
keywords = ["apexforge", "lua", "serialization", "scripting"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
bincode = "2.0.0-rc.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mlua = { version = "0.9", features = ["lua54"] }